# backend/routes/package.js
@@ -3,8 +3,8 @@ const router = express.Router();
 const controller = require("../controllers/packageController");
 
 router.post("/add", controller.addPackage);
-// router.get("/", controller.getPackages);
-// router.put("/update", controller.updatePackage);
-// router.delete("/delete", controller.deletePackage);
+router.get("/", controller.getPackages);
+router.put("/update", controller.updatePackage);
+router.delete("/delete", controller.deletePackage);
 
 module.exports = router;
